[gd_scene load_steps=14 format=3 uid="uid://dslfsjethb3t0"]

[ext_resource type="Script" path="res://level_select.gd" id="1_0xfyi"]
[ext_resource type="Texture2D" uid="uid://bua5lnqf7u4eg" path="res://assets/crumpled-paper.png" id="2_f8u1x"]
[ext_resource type="FontFile" uid="uid://cu2tmhg1ywhjj" path="res://assets/fonts/Tinos-Bold.ttf" id="3_5e0fk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipvoe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f5acj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qewl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1dm5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yme2c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xkn6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_is4ya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8voj4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbpno"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f54cj"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xfyi")

[node name="Crumpled-paper" type="Sprite2D" parent="."]
position = Vector2(768, 466)
scale = Vector2(1.10192, 1.10192)
texture = ExtResource("2_f8u1x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 54
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 118
text = "PAPIER BOY"

[node name="TopBarColorRect2" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 25.0
offset_right = 1220.0
offset_bottom = 35.0
color = Color(0, 0, 0, 1)

[node name="TopBarColorRect3" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 83.0
offset_right = 1220.0
offset_bottom = 93.0
color = Color(0, 0, 0, 1)

[node name="TopBarColorRect4" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 59.0
offset_top = 217.0
offset_right = 1219.0
offset_bottom = 227.0
color = Color(0, 0, 0, 1)

[node name="XDJText" type="Label" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 39.0
offset_right = 275.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 36
text = "XDJ Games"

[node name="LudumDareText" type="Label" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 39.0
offset_right = 1211.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 36
text = "Ludum Dare 53"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 608.0
offset_right = 867.0
offset_bottom = 694.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_ipvoe")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f5acj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3qewl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_u1dm5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yme2c")
text = "MAIN MENU
"

[node name="Level0Button" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 397.0
offset_right = 328.0
offset_bottom = 479.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6xkn6")
theme_override_styles/hover = SubResource("StyleBoxFlat_is4ya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8voj4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bbpno")
theme_override_styles/focus = SubResource("StyleBoxFlat_f54cj")
text = "0"

[node name="Level1Button" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 398.0
offset_right = 521.0
offset_bottom = 480.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6xkn6")
theme_override_styles/hover = SubResource("StyleBoxFlat_is4ya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8voj4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bbpno")
theme_override_styles/focus = SubResource("StyleBoxFlat_f54cj")
text = "1"

[node name="Level2Button" type="Button" parent="."]
layout_mode = 0
offset_left = 590.0
offset_top = 396.0
offset_right = 714.0
offset_bottom = 478.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6xkn6")
theme_override_styles/hover = SubResource("StyleBoxFlat_is4ya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8voj4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bbpno")
theme_override_styles/focus = SubResource("StyleBoxFlat_f54cj")
text = "2"

[node name="Level3Button" type="Button" parent="."]
layout_mode = 0
offset_left = 776.0
offset_top = 398.0
offset_right = 900.0
offset_bottom = 480.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6xkn6")
theme_override_styles/hover = SubResource("StyleBoxFlat_is4ya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8voj4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bbpno")
theme_override_styles/focus = SubResource("StyleBoxFlat_f54cj")
text = "3
"

[node name="Level4Button" type="Button" parent="."]
layout_mode = 0
offset_left = 977.0
offset_top = 399.0
offset_right = 1101.0
offset_bottom = 481.0
theme_override_colors/font_color = Color(0, 0, 0, 0.796078)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.313726, 0.364706, 0.752941)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_5e0fk")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6xkn6")
theme_override_styles/hover = SubResource("StyleBoxFlat_is4ya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8voj4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bbpno")
theme_override_styles/focus = SubResource("StyleBoxFlat_f54cj")
text = "4"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Level0Button" to="." method="_on_level_0_button_pressed"]
[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="Level4Button" to="." method="_on_level_4_button_pressed"]
